# image-registry

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs  service_url.rs
client/src/async_client/: mod.rs
ir-client/: Cargo.toml  README.md
ir-client/src/: client.rs  config.rs  error.rs  hasher.rs  layer.rs  lib.rs  reference.rs  service_url.rs  utils.rs
ir-client/src/async_client/: mod.rs
ir-client/src/oci/: client.rs  mod.rs  reference.rs  service_url.rs
ir-client/src/oci/blocking/: client.rs
ir-protocol/: Cargo.toml
ir-protocol/src/: lib.rs
ir-server/: Cargo.toml  README.md
ir-server/certs/: server.crt  server.key
ir-server/src/: config.rs  error.rs  httpd.rs  lib.rs  main.rs  oci.rs  registry.rs  stream.rs  tls.rs  utils.rs
ir-server/src/oci/: application.rs  digest.rs  hasher.rs  mod.rs  registry.rs  sha2.rs  tag.rs  validate.rs
ir-server/tests/applications/wrong_manifest_digest/: oci-layout
ir-sign/: .gitignore  Cargo.toml  README.md
ir-sign/example/: cmds_openssl.txt  cmds_rust.txt
ir-sign/src/: crypto.rs  digest.rs  error.rs  main.rs  oci.rs  subcmds.rs  utils.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
registry/: README.md
registry/com.samsung.example.app/: index.json
registry/light_app/: .gitignore  Dockerfile  Makefile  index.json  print.c
server/: Cargo.toml
server/src/: config.rs  httpd.rs  main.rs  registry.rs  utils.rs
