[package]
name = "ir-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir-protocol = { path = "../ir-protocol" }
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
log = "*"
env_logger = "*"
tokio = { version = "*", features = [ "full" ] }
tokio-util = { version = "*", features = [ "io" ] }
tower = { version = "*", features = ["util", "timeout"] }
tower-http = { version = "*", features = ["add-extension", "trace"] }
axum = "*"
async-trait = "*"
futures-core = "*"
tokio-rustls = "*"
rustls-pemfile = "1.*"
