[package]
name = "ir-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
env_logger = "*"
futures-core = "*"
futures-util = { version = "*", default-features = false }
rustls-pemfile = "*"
tokio = { version = "*", features = [ "full" ] }
tokio-util = { version = "*", features = [ "io" ] }
tokio-rustls = "^0.26"
hyper = { version = "*", features = ["full"] }
hyper-util = "*"
tower = { version = "*", features = ["make", "util", "timeout"] }
tower-http = { version = "*", features = ["add-extension", "trace"] }
tower-service = "*"
axum = "*"
async-trait = "*"
oci-spec = "0.6"
sha2 = "*"
hex = "*"
regex = "*"
axum-extra = { version = "*", features = ["typed-header"] }
pin-project-lite = "*"
bytes = "*"
# RA-TLS
ratls = { git = "https://github.com/islet-project/ratls" }
realm-verifier = { git = "https://github.com/islet-project/realm-verifier" }
veraison-verifier = { git = "https://github.com/islet-project/veraison-verifier" }

[features]
# this is for testing purposes only, DO NOT ENABLE otherwise
disable-challenge-veraison = [ "ratls/disable-challenge" ]
